# ecommerce-chatbot

./: .env.example  .gitignore  CHATBOT_GUIDE.md  README.md  migrate.py  pyproject.toml  run.py  seed_data.py  setup_db.py
genesis_ecommerce/: app.py  config.py  logger.py
genesis_ecommerce/api/v1/: __init__.py  orders.py  support.py
genesis_ecommerce/customer_support_bot/: README.md  __init__.py  bot.py
genesis_ecommerce/customer_support_bot/documents/: support_guide.txt  terms_and_conditions.txt
genesis_ecommerce/db/: core.py  schema.py
